sfdx-source/main/default/objects/ServiceAppointment/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who cancelled a Service Appointment.</description>
    <inlineHelpText>The user who cancelled a Service Appointment.</inlineHelpText>
    <label>Cancelled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>