sfdx-source/main/default/objects/ServiceAppointment/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Owner Name</description>
    <formula>IF( BEGINS( OwnerId , &quot;005&quot;), Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName, Owner:Queue.QueueName )</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>