sfdx-source/main/default/objects/ServiceAppointment/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <description
    >This is a dependent picklist where the controlling picklist field is &quot;Status&quot; on the Service Appointment object. This further provides insight as to the main
        reason for cancellation of appointment.</description>
    <inlineHelpText
    >If patient seen in primary care, emergency department, mental health, specialty care, or community care, select &apos;Patient Being Seen Elsewhere&apos; for Reason for
        Cancellation.</inlineHelpText>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient declined care</fullName>
            </value>
            <value>
                <fullName>Patient being seen elsewhere</fullName>
            </value>
            <value>
                <fullName>Patient will call back to reschedule</fullName>
            </value>
            <value>
                <fullName>Unexpected Provider Absence</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>