sfdx-source/main/default/objects/ServiceAppointment/fields/VCC_Facility_for_Appointment__c.field-meta.xml
<CustomField>
    <fullName>VCC_Facility_for_Appointment__c</fullName>
    <description>Select the Facility this Appointment is related to</description>
    <inlineHelpText>Select the Facility this Appointment is related to</inlineHelpText>
    <label>Facility for Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VCC_VISN_for_Appointment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(608) Manchester, NH</fullName>
            </value>
            <value>
                <fullName>(650) Providence, RI</fullName>
            </value>
            <value>
                <fullName>(689) Connecticut HCS (Westhaven)</fullName>
            </value>
            <value>
                <fullName>(405) White River Junction VT</fullName>
            </value>
            <value>
                <fullName>(518) Bedford,MA</fullName>
            </value>
            <value>
                <fullName>(523) Boston HCS (Boston)</fullName>
            </value>
            <value>
                <fullName>(402) Togus ME</fullName>
            </value>
            <value>
                <fullName>(631) Northampton, MA</fullName>
            </value>
            <value>
                <fullName>(528) Upstate New York HCS</fullName>
            </value>
            <value>
                <fullName>(620) Hudson Valley HCS (Castle Point, Montrose)</fullName>
            </value>
            <value>
                <fullName>(630) New York HHS (Brooklyn)</fullName>
            </value>
            <value>
                <fullName>(632) Northport, NY</fullName>
            </value>
            <value>
                <fullName>(526) Bronx, NY</fullName>
            </value>
            <value>
                <fullName>(561) New Jersey HCS (East Orange)</fullName>
            </value>
            <value>
                <fullName>(503) Altoona, PA</fullName>
            </value>
            <value>
                <fullName>(646) Pittsburgh HCS (Pittsburgh PA)</fullName>
            </value>
            <value>
                <fullName>(460) Wilmington DE</fullName>
            </value>
            <value>
                <fullName>(529) Butler, PA</fullName>
            </value>
            <value>
                <fullName>(542) Coatesville, PA</fullName>
            </value>
            <value>
                <fullName>(562) Erie, PA</fullName>
            </value>
            <value>
                <fullName>(595) Lebanon, PA</fullName>
            </value>
            <value>
                <fullName>(693) Wilkes-Barre, PA</fullName>
            </value>
            <value>
                <fullName>(642) Philadelphia, PA</fullName>
            </value>
            <value>
                <fullName>(512) Maryland HCS (Baltimore MD)</fullName>
            </value>
            <value>
                <fullName>(517) Beckley, WV</fullName>
            </value>
            <value>
                <fullName>(540) Clarksburg, WV</fullName>
            </value>
            <value>
                <fullName>(581) Huntington, WV</fullName>
            </value>
            <value>
                <fullName>(688) Washington DC</fullName>
            </value>
            <value>
                <fullName>(613) Martinsburg, WV</fullName>
            </value>
            <value>
                <fullName>(637) Asheville, NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>