sfdx-source/main/default/objects/ServiceAppointment/fields/VCC_Last_4_SSN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Last_4_SSN__c</fullName>
    <formula>RIGHT(Account.SSN_Search__c,4)</formula>
    <label>Last 4 SSN</label>
    <type>Text</type>
</CustomField>