sfdx-source/main/default/objects/ServiceAppointment/fields/VCC_VerifyEmailAndPhone__c.field-meta.xml
<CustomField>
    <fullName>VCC_VerifyEmailAndPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates on the service appointment record if the patient information was verified</description>
    <label>Verified patient contact information</label>
    <type>Checkbox</type>
</CustomField>