sfdx-source/main/default/objects/ServiceAppointment/fields/VCC_VISN_for_Appointment__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN_for_Appointment__c</fullName>
    <description>Select the VISN that this Appointment is related to</description>
    <inlineHelpText>Select the VISN that this Appointment is related to</inlineHelpText>
    <label>VISN for Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VISN 1</fullName>
            </value>
            <value>
                <fullName>VISN 2</fullName>
            </value>
            <value>
                <fullName>VISN 4</fullName>
            </value>
            <value>
                <fullName>VISN 5</fullName>
            </value>
            <value>
                <fullName>VISN 6</fullName>
            </value>
            <value>
                <fullName>VISN 7</fullName>
            </value>
            <value>
                <fullName>VISN 8</fullName>
            </value>
            <value>
                <fullName>VISN 9</fullName>
            </value>
            <value>
                <fullName>VISN 10</fullName>
            </value>
            <value>
                <fullName>VISN 12</fullName>
            </value>
            <value>
                <fullName>VISN 15</fullName>
            </value>
            <value>
                <fullName>VISN 16</fullName>
            </value>
            <value>
                <fullName>VISN 17</fullName>
            </value>
            <value>
                <fullName>VISN 19</fullName>
            </value>
            <value>
                <fullName>VISN 20</fullName>
            </value>
            <value>
                <fullName>VISN 21</fullName>
            </value>
            <value>
                <fullName>VISN 22</fullName>
            </value>
            <value>
                <fullName>VISN 23</fullName>
            </value>
            <value>
                <fullName>VISN 99</fullName>
            </value>
            <value>
                <fullName>V0</fullName>
                <isActive>false</isActive>
                <label>V0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>