sfdx-source/main/default/objects/ServiceAppointment/validationRules/VCC_Earliest_Start_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Earliest_Start_Cannot_Be_Changed</fullName>
    <active>true</active>
    <description>Earliest Start Permitted comes from the flow, user should not be able to change the status</description>
    <errorConditionFormula
    >AND ( RecordType.DeveloperName = &apos;VCC_Virtual_Clinic_Visit&apos;, ISCHANGED( EarliestStartTime ), !ISNEW()) &amp;&amp; !$Permission.DisableTriggersFlag &amp;&amp;
        $Permission.VCC_Appointment_Viewer</errorConditionFormula>
    <errorMessage>Earliest Start Date cannot be changed</errorMessage>
</ValidationRule>