sfdx-source/main/default/objects/ServiceAppointment/listViews/VCC_My_Scheduled_VCV_Appointments.listView-meta.xml
<ListView>
    <fullName>VCC_My_Scheduled_VCV_Appointments</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>VCC_Last_4_SSN__c</columns>
    <columns>AppointmentType</columns>
    <columns>SchedStartTime</columns>
    <columns>VCC_Facility_for_Appointment__c</columns>
    <columns>Subject</columns>
    <columns>Case__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>StatusCategory</field>
        <operation>notEqual</operation>
        <value>6,4,5</value>
    </filters>
    <label>My Upcoming VCV Appointments</label>
    <sharedTo>
        <group>VAHC_Medical_Providers</group>
    </sharedTo>
</ListView>